# fastmcp-extensions

./: CONTRIBUTING.md  README.md  poe_tasks.toml  pyproject.toml
.github/workflows/: autofix-command.yml  docs-generate.yml  format-check.yml  lint-check.yml  lock-command.yml  poe-command.yml  prerelease-command.yml  publish.yml  pytest-fast.yml  pytest-matrix.yml  release-drafter.yml  semantic-pr-check.yml  slash-command-dispatch.yml
src/awesome_python_template/: __init__.py
src/fastmcp_extensions/: __init__.py  _cli.py  _middleware.py  _telemetry.py  _telemetry_middleware.py  annotations.py  auth.py  cli.py  client_credentials_middleware.py  decorators.py  key_normalization.py  landing_page.py  logging_redaction.py  measurement.py  middleware.py  registration.py  server.py  testing.py  tool_filters.py
src/fastmcp_extensions/utils/: __init__.py  describe_server.py  docs.py  env.py  measurement.py  test_tool.py  testing.py
src/fastmcp_extensions/utils/test_tool/: __init__.py  __main__.py
src/fastmcp_extensions/utils/testing/: __init__.py  __main__.py
tests/: test_auth.py  test_awesome_python_template.py  test_cli.py  test_client_credentials_middleware.py  test_docs.py  test_fastmcp_extensions.py  test_key_normalization.py  test_landing_page.py  test_logging_redaction.py  test_middleware.py  test_server.py  test_telemetry.py  test_telemetry_middleware.py  test_trusted_execution.py
